--- a/product-manager.html
+++ b/product-manager.html
@@ -78,7 +78,7 @@
 <p><span class="badge badge-light">Palo Alto, California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=ovgBafwg&__jvst=Employee&__jvsd=sGgJ2hwt&__jvsc=Twitter&bid=nutkWLwt'>Ingram Micro Careers - Sr Product Manager-USA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=ovgBafwg&__jvst=Employee&__jvsd=sGgJ2hwt&__jvsc=Twitter&bid=nutkWLwt'>Ingram Micro Careers - Sr Product Manager-USA</a></h5> 
 <p><span class="badge badge-light">Irvine California</span></p>
 <p>Posted on:: 2019-07-28</p>
 <hr/>
@@ -86,7 +86,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/carta/111029b9-b725-4c67-beb2-ddd28e6fe8dc'>Carta - Product Manager+, Public Securities Brokerage</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/carta/111029b9-b725-4c67-beb2-ddd28e6fe8dc'>Carta - Product Manager+, Public Securities Brokerage</a></h5> 
 <p><span class="badge badge-light">New York City, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -128,13 +128,28 @@
 <p><span class="badge badge-light">Ontario, Canada</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://generali-global-health-services.workable.com/j/FDD22B7D70'>Generali Global Health Services - Jobs: Product Owner, Digital Transformation - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://generali-global-health-services.workable.com/j/FDD22B7D70'>Generali Global Health Services - Jobs: Product Owner, Digital Transformation - Apply online</a></h5> 
 <p><span class="badge badge-light">Ontario, Canada</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oVYY9fwK&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=nMJeWLwV'>ServiceNow Careers - Senior Technical Product Manager, Platform</a></h5> 
 <p><span class="badge badge-light">Chicago Chicago, IL San Diego Chicago</span></p>
 <p>Posted on:: 2019-07-28</p>
+<hr/>
+<h5><a href='https://eygbl.referrals.selectminds.com/jobs/product-manager-90246'>Product Manager - EY Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 16, 2019 ... Technology has always been at the heart of what we do and deliver at EY. We 
+need technology to keep an organization the size of ours working...</p>
+<hr/>
+<h5><a href='https://4re.referrals.selectminds.com/elsevier/jobs/ecommerce-product-manager-25325'>eCommerce Product Manager - ELSEVIER Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>4 days ago ... Elsevier eBusiness Operations is currently looking for an eCommerce Product 
+Manager, based in Amsterdam. As the eCommerce Product Manager, you'll...</p>
+<hr/>
+<h5><a href='https://lazard.referrals.selectminds.com/professional/jobs/it-product-manager-lam-835'>IT Product Manager (LAM) - Lazard Careers Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>4 days ago ... Thanks for your interest in the IT Product Manager (LAM) position. Unfortunately 
+this position has been closed due to changes in the recruiting system. But you?...</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/sevenrooms/jobs/4251170002'>Job Application for Technical Product Manager at SevenRooms</a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -148,7 +163,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/gitlab/jobs/4368627002'>Job Application for Senior Product Designer,  Growth at GitLab</a></h5> 
+<h5><a href='https://boards.greenhouse.io/gitlab/jobs/4368627002'>Job Application for Senior Product Designer,  Growth at GitLab</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -169,11 +184,11 @@ design solutions to our customer problems. Create high level user stories that?.
 design solutions to our customer problems. Create user stories that communicate
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/avantstay/5309b580-c352-43f5-8e49-98e13d46454a'>AvantStay - Product Manager (Growth)</a></h5> 
+<h5><a href='https://jobs.lever.co/avantstay/5309b580-c352-43f5-8e49-98e13d46454a'>AvantStay - Product Manager (Growth)</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/quantcast/cea54067-a1ce-44ea-8761-ab0ceaedfcbd'>Quantcast - Product Manager/Senior Product Manager, Targeting</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/quantcast/cea54067-a1ce-44ea-8761-ab0ceaedfcbd'>Quantcast - Product Manager/Senior Product Manager, Targeting</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -228,7 +243,7 @@ closely with internal and external cross-functional stakeholders, you will ident
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://rocketsofawesome.recruiterbox.com/jobs/fk0317d'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://rocketsofawesome.recruiterbox.com/jobs/fk0317d'>
     Associate Product Manager at Rockets of Awesome
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -267,11 +282,11 @@ in Syracuse, New York. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://seequent.workable.com/j/8C127AACCE'>Seequent - Jobs: Product Owner - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://seequent.workable.com/j/8C127AACCE'>Seequent - Jobs: Product Owner - Apply online</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/starry/jobs/4370604002'>Job Application for Product Manager at Starry</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/starry/jobs/4370604002'>Job Application for Product Manager at Starry</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -304,7 +319,7 @@ in Syracuse, New York. Review all of the job details and apply today!</p>
 <p>6 days ago ... ... goals; Collect and organize product feedback from customer surveys, customer 
 support, sales, marketing, and system usage data provided by development?...</p>
 <hr/>
-<h5><a href='https://flowtify.recruiterbox.com/jobs/fk0jqzl/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://flowtify.recruiterbox.com/jobs/fk0jqzl/'>
     Product Owner (m/w/d) at Flowtify GmbH
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -354,7 +369,7 @@ published: 12.04.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Sofia City Province, Bulgaria</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tide.workable.com/j/F392F9AD03'>Tide Business Banking - Jobs: Product Owner - Tooling - Apply online</a></h5> 
+<h5><a href='https://tide.workable.com/j/F392F9AD03'>Tide Business Banking - Jobs: Product Owner - Tooling - Apply online</a></h5> 
 <p><span class="badge badge-light">Sofia City Province, Bulgaria</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -394,7 +409,7 @@ published: 12.04.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://bossanovarobotics.applytojob.com/apply/I07CAmf6Rw/Technical-Product-Manager-Robotics'>Technical Product Manager - Robotics - Bossanova Robotics - Career Page</a></h5> 
+<h5><a href='http://bossanovarobotics.applytojob.com/apply/I07CAmf6Rw/Technical-Product-Manager-Robotics'>Technical Product Manager - Robotics - Bossanova Robotics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -432,7 +447,7 @@ published: 12.04.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cargo/c59957bf-b904-49b5-95d0-3d89dd86f96b'>Cargo - Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/cargo/c59957bf-b904-49b5-95d0-3d89dd86f96b'>Cargo - Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -454,18 +469,6 @@ published: 12.04.2019). Apply now or check the other available jobs.</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/clear/jobs/1793103'>Job Application for Product Designer- Contract at CLEAR - Corporate</a></h5> 
 <p><span class="badge badge-light">New York, United States</span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1787197'>Job Application for Sr. Product Manager at Fitbit</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/entelo/jobs/1793522'>Job Application for Product Manager at Entelo</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA</span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/samsung-next/job/okwCafwm'>Samsung NEXT Careers - Principal Product Manager</a></h5> 
-<p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 
